--- a/TCP-backend/.env
+++ b/TCP-backend/.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGODB_URI=mongodb://127.0.0.1:27017/tcp-backend
+MONGODB_URI=mongodb+srv://yashbhatt2362:Yashbhatt11@cluster0.z4vatru.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=your-secret-key-here
 ADMIN_EMAIL=admin@example.com
 ADMIN_PASSWORD=Admin@123
